# flawed

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mise.toml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: block-direct-pytest.sh
.codex/: config.toml
.codex/hooks/: block-direct-pytest.sh
.github/workflows/: publish.yml
docs/: analysis-model.md  cli.md  provider-authoring.md  python-api.md  writing-rules.md
src/flawed/: __init__.py  _process.py  blueprint.py  calls.py  checks.py  class_.py  collections.py  conditions.py  core.py  correlation.py  detector.py  disagreement.py  effects.py  evidence.py  findings.py  flow.py  function.py  generated.py  inputs.py  repo.py  route.py  scopes.py  severity.py  sinks.py  validation.py
src/flawed/_cli/: __init__.py  _code_signature.py  _common.py  _observability.py  _profile_metrics.py  _profile_phases.py  _profile_summaries.py  app.py  explore.py  inspect.py  inspect_commands.py  output.py  pipeline.py  profile.py  provider_coverage.py  provider_engine_cache.py  result_cache.py  ribrarian_bridge.py  rules.py  scan_record.py  suppression.py  target.py
src/flawed/_config/: __init__.py  loader.py  lock.py  match.py  merge.py  paths.py  schema.py
src/flawed/_index/: __init__.py  _callgraph.py  _cfg.py  _collections.py  _dominance.py  _graphs.py  _invariants.py  _mypy_batch_oracle.py  _parsing.py  _pipeline.py  _resolution.py  _schema_lock.json  _spans.py  _structural.py  _type_enrichment.py  _types.py  _valueflow.py
src/flawed/_rules/: __init__.py  endpoints.py  request_inputs.py  route_guards.py  type_disagreements.py  value_flow.py
src/flawed/_rules_smoke/: __init__.py
src/flawed/_semantic/: __init__.py  _alias_resolution.py  _auth_inference.py  _branch.py  _budget.py  _callee_graph.py  _cfgview.py  _check_conversion.py  _collections.py  _condition_conversion.py  _container_argument_inputs.py  _conversion.py  _conversion_utils.py  _dependency_conversion.py  _dispatch_conversion.py  _effect_conversion.py  _enriched.py  _expr_cache.py  _flow_engine.py  _flow_index.py  _flow_propagation.py  _flow_tracer.py  _input_conversion.py  _lifecycle_conversion.py  _matching.py  _membership_inputs.py  _method_dispatch.py  _predicate_eval.py  _property_setter_dispatch.py  _provider_engine.py  _proxy_flow.py  _route_conversion.py  _router_groups.py  _safe_generated_url_conversion.py  _scope.py  _sink_conversion.py  _structural_url_guard.py  _table_dispatch.py  _taint_prototype.py  _type_disagreement_conversion.py  (+2 more)
tests/: conftest.py  factories.py  testmon_fixture_dep.py
tests/_guards/: __init__.py  subprocess_guard.py
tests/e2e/: __init__.py  conftest.py  test_cli_rule_pipeline.py  test_cli_scan_cache_identity.py  test_observability_record.py  test_results_cache.py  test_vertical_slice.py
tests/helpers/: artifact_fixtures.py  paths.py  rule_runner.py
tests/integration/: __init__.py  test_artifact_portability.py  test_artifact_seam.py  test_crypto_instance_verify.py  test_open_repo.py  test_relative_match_keys.py
tests/specs/: conftest.py
tests/specs/basics/: test_call_graph.py  test_cfg.py  test_class_discovery.py  test_decorator_discovery.py  test_function_discovery.py  test_imports_resolution.py  test_overload_signatures.py  test_scoped_queries.py  test_value_flow.py
tests/specs/exploration/: test_accessors_and_memo.py  test_blueprints.py  test_public_api_exploration.py
tests/specs/semantic/: __init__.py  conftest.py  test_branch_reconstruction.py  test_call_receiver.py  test_check_resolution.py  test_cross_cutting.py  test_dependency_injection.py  test_effect_resolution.py  test_flask_restx_routes.py  test_flow_propagation.py  test_inferred_state_writes.py  test_input_resolution.py  test_intra_provenance.py  test_lifecycle_resolution.py  test_oauth_factory_effects.py  test_orm_query_reads.py  test_orm_query_split.py  test_provider_claim_inputs.py  test_provider_claim_interproc.py  test_provider_matrix.py  test_real_world_gaps.py  test_route_resolution.py  test_sink_detection.py
tests/unit/cli/: test_cli.py  test_cli_deadline_output.py  test_cli_discoverability.py  test_cli_output_formats.py  test_cli_output_paths.py  test_cli_ribrarian.py  test_completions.py  test_findings_exploration.py  test_inspect.py  test_observability_rss.py  test_output_findings.py  test_pipeline_budget_honesty.py  test_profile_infrastructure.py  test_provider_engine_cache.py  test_result_cache.py  test_ribrarian_bridge.py  test_rule_loader_external.py  test_rule_profiling.py  test_scan_record.py  test_scan_record_pipeline.py  test_severity.py  test_suppression.py  test_suppression_surfaced.py  test_version_flag.py
tests/unit/config/: test_config.py  test_override_preserves_fields.py  test_smoke_manifest.py
tests/unit/l1/: test_brain_plugins.py  test_callgraph.py  test_cfg.py  test_cfgview.py  test_check_runtime_deps.py  test_code_index.py  test_dominance.py  test_dominance_integration.py  test_field_access_input_resolution.py  test_flask_input_resolution.py  test_flask_route_resolution.py  test_flow_index.py  test_flow_tracer.py  test_input_key_propagation.py  test_input_key_route_attribution.py  test_l1_types.py  test_method_dispatch.py  test_parameter_input_resolution.py  test_parsing.py  test_predicate_eval.py  test_provider_engine.py  test_schema_version.py  test_semantic_flow_caches.py  test_state_effect_resolution.py  test_structural.py  test_structural_url_guard.py  test_table_dispatch.py  test_unresolved_dispatch_gaps.py  test_valueflow.py  test_webapp.py
tests/unit/l2/: test_branch_reconstruction_gaps.py  test_budget_trajectory.py  test_callee_graph.py  test_check_conversion.py  test_check_type_surface.py  test_collection_ops.py  (+32 more)
tools/: __init__.py  _schema_lock.py  _test_lock.py  build_fixture_artifacts.py  cfg_idom_benchmark.py  check_framework_names.py  check_l1_schema.py  check_managed_subprocess.py  check_runtime_deps.py  quality.py  release.py  test_profile.py  test_report.py  update_schema_lock.py
tools/hooks/: pre-commit
tools/stress/: __init__.py  __main__.py  generate.py  measure.py
(+841 files in other folders)
